<resources>
    <string name="app_name">Сахара SOS!</string>
    <string name="not_working">Вкажіть, що у Вас не працює:</string>
    <string name="kotel">Не запалюєтся котел</string>
    <string name="hotwater">Проблема з гарячою водою</string>
    <string name="kondecioner">Не працює кондиціонер</string>
    <string name="vorota">Проблема з гаражними воротами чи автоматикою</string>
    <string name="client">Я клієнт компанії САХАРА</string>
    <string name="message">Коментар / Назва обладнання</string>
    <string name="send_botton">Відправити запит</string>
    <string name="detalno">Більше інформації про компанію</string>
    <string name="phone">+380673515655</string>
    <string name="settings">Налаштування</string>
    <string name="about_us">Про компанію</string>
    <string name="about_program">Про додаток</string>
    <string name="about_program_content">
        <b>Ihor Mozil (m1g0r)</b>\n
        1@sahara.com.ua\n
        tel. +380 97 973 22 13\n
        \n
        APP: SAHARA SOS\n
        version: 0.1 beta_test
    </string>
    <string name="contacts">Контакти</string>
    <string name="contact_us_title">Контактна інформація</string>
    <string name="kiev"><b>м. Київ</b></string>
    <string name="contact_kiev">
        вул. Новокостянтинівська, 1В\n
        тел. (044) 425-06-39\n
        тел. (050) 434-93-03\n
        e-mail: info@sahara.com.ua\n
        \n
        <i><b>Сервісний центр</b></i>\n
        тел. (050) 339-18-00\n
        e-mail: yura@sahara.com.ua
    </string>
    <string name="ternopil"><b>м. Тернопіль</b></string>
    <string name="contact_ternopil">
        вул. Коцюбинського, 6\n
        тел. (0352) 43-38-19\n
        тел. (0352) 43-10-89\n
        e-mail: office@sahara.com.ua\n
        \n
        <i><b>Сервісний центр</b></i>\n
        тел. (0352) 23-51-05\n
        тел. (067) 351-56-55\n
        тел. (050) 339-15-65\n
        e-mail: service@sahara.com.ua
    </string>
    <string name="frankivsk"><b>м. Івано-Франківськ</b></string>
    <string name="contact_if">
        вул. Шопена, 9\n
        тел. (0342) 75-05-03\n
        e-mail: manko@sahara.com.ua\n
        \n
        <i><b>Сервісний центр</b></i>\n
        тел. (067) 351-34-00\n
        e-mail: mariya.i@sahara.if.ua
    </string>
    <string name="about_us_content">
        Ціль компанії: Підвищення якості життя людей та захист навколишнього середовища, шляхом створення надійних та ефективних енергозберігаючих систем теплопостачання на основі відновлювальних джерел енергії.\n
        \n
        Стратегія розвитку ТОВ «Сахара» базується на наданні комплексу послуг найвищої якості:\n
        - проектування\n
        - комплектація\n
        - монтаж\n
        - гарантійне обслуговування\n
        - сервісне обслуговування\n
        - індивідуальні рішення\n
        \n
        В своїй діяльності ми покладаємось на високоефективне обладнання , відновлювальні джерела енергії, професійний персонал, професійний інструмент , контроль якості та відповідальність, постійне вдосконалення та навчання.\n
        \n
        Завдяки професійній роботі всього колективу, ми досягаємо максимального результату — створення ідеального комфорту в домівках наших клієнтів.\n
        \n
        Навчання, постійне підвищення кваліфікації та стажування за кордоном дає змогу співробітникам компанії запропонувати вам нові, цікаві, і в багатьох випадках нестандартні рішення. Використання інноваційного та високоякісного обладнання, сучасних матеріалів та інструментів гарантує нашим клієнтам створення надійних, ресурсозберігальних інженерних систем. Інновації та екологія — кредо нашої фірми.\n
        \n
        Сьогодні ТОВ «Сахара» — це три повноцінних підрозділи в Києві , Тернополі та Івано-Франківську, що надають комплекс послуг партнерам та клієнтам:\n
        - постачання обладнання;\n
        - проектування;\n
        - монтаж та налагодження систем тепло та водопостачання;\n
        - гарантійне та сервісне обслуговування.\n
        \n
        Високий професійний рівень працівників дає нам можливість виконувати весь комплекс інженерних робіт — від проектування до введення в експлуатацію, як приватних будинків, так і великих промислових об’єктів, у всіх регіонах України. На кожному етапі роботи, починаючи від замовлення та закінчуючи сервісним обслуговуванням встановленого обладнання, ми намагаємось надати послуги найвищої якості кожному з наших клієнтів.\n
        \n
        Понад 200 співробітників компанії завжди готові запропонувати найоптимальніші рішення та створити надійні інженерні системи. Нові нестандартні рішення та індивідуальний підхід до кожного клієнта — характеризуютьнашу роботу. Асортимент продукції, що пропонується товариством «Сахара», налічує понад 12 000 найменувань теплотехнічного обладнання та дозволяє задовольнити будь-які вимоги замовника і створити систему найвищого рівня складності.\n
        \n
        Особливу увагу ми приділяємо інноваційному та  ресурсозберігальному обладнанню:\n
        - геліосистеми, що перетворюють сонячне світло в теплову енергію;\n
        - теплові насоси, які використовують в своїй роботі енергію навколишнього середовища;\n
        - обладнання, що працює на біомасі та має нейтральні викиди СО2.\n
        \n
        Компанія «Сахара» є дистриб’ютором багатьох відомих європейських виробників. Ми пропонуємо нашим партнерам найвигідніші цінові умови.
    </string>
</resources>
