<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_settings"
        android:title="@string/settings"
        android:orderInCategory="1"
        app:showAsAction="never" />

    <item android:id="@+id/action_aboutus"
        android:title="@string/about_us"
        android:orderInCategory="2"
        app:showAsAction="never" />

    <item android:id="@+id/action_contacts"
        android:title="@string/contacts"
        android:orderInCategory="3"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_about_program"
        android:title="@string/about_program"
        android:orderInCategory="4"
        app:showAsAction="never" />

</menu>