<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/bg">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/sahara_tern"
                        android:contentDescription="@string/kiev"
                        android:layout_gravity="top"
                        android:adjustViewBounds="true" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/kiev"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_kiev"
                        android:textSize="18sp"
                        android:layout_marginTop="3dp"
                        android:layout_marginLeft="15dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/bg">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/sahara_tern"
                        android:contentDescription="@string/ternopil"
                        android:layout_gravity="top"
                        android:adjustViewBounds="true" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ternopil"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_ternopil"
                        android:textSize="18sp"
                        android:layout_marginTop="3dp"
                        android:layout_marginLeft="15dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/bg">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/sahara_tern"
                        android:contentDescription="@string/frankivsk"
                        android:layout_gravity="top"
                        android:adjustViewBounds="true" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/frankivsk"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_if"
                        android:textSize="18sp"
                        android:layout_marginTop="3dp"
                        android:layout_marginLeft="15dp"/>

                </LinearLayout>

            </FrameLayout>

        </LinearLayout>

    </TabHost>

</LinearLayout>